# online_university

./: .env_template  .gitignore  Dockerfile  docker-compose.yaml  materials_data.json  pyproject.toml  requirements.txt  users_data.json
config/: settings.py  urls.py
materials/: models.py  paginators.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_initial.py  0003_course_price_lesson_price.py
payments/: models.py  urls.py  views.py
payments/migrations/: 0001_initial.py  0002_initial.py  0003_payment_services_id_payment_success_url.py
users/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/management/commands/: createsu.py  default_user_payment_fill.py
users/migrations/: 0001_initial.py  0002_payment_paid_lesson_alter_payment_paid_course.py  0002_subscription.py
